--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,18 +4,26 @@
   z-index: 999;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1100px) {
     background: #ffffff;
     position: fixed;
     top: 0;
   }
 }
 
+.header.sticky {
+  padding-bottom: 30px;
+}
+
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 0;
+  padding: 20px 0;
+
+  @media screen and (max-width: 1024px) {
+    padding: 15px 0;
+  }
 
   &-logo {
     cursor: pointer;
@@ -23,59 +31,53 @@
     img {
       width: 100%;
 
-      @media screen and (max-width: 768px) {
-        width: 100px;
+      @media screen and (max-width: 1024px) {
+        width: 80px;
       }
     }
   }
 
   &-contact {
-    font-size: 18px;
+    font-family: Montserrat;
+    font-size: 20px;
     font-weight: bold;
     color: #01a1b7;
     margin-right: auto;
-    margin-left: 50px;
+    margin-left: 30px;
 
     @media screen and (max-width: 1100px) {
       display: none;
     }
 
     p {
-      margin-top: 10px;
+      margin-bottom: 5px;
     }
   }
 
   &-buttons {
     height: 100%;
 
-    @media screen and (max-width: 1350px) {
+    @media screen and (max-width: 1400px) {
       display: grid;
       grid-template-columns: auto auto;
       grid-template-rows: auto auto;
     }
 
     @media screen and (max-width: 1100px) {
-      margin-left: 30px;
-    }
-
-    @media screen and (max-width: 768px) {
       display: none;
     }
 
     a {
-      margin-left: 5px;
-      margin-right: 5px;
-      padding: 10px;
+      font-size: 16px;
+      margin-left: 30px;
+      padding: 10px 20px;
       background-color: #f4c93f;
       border-radius: 10px;
       outline: none;
 
-      @media screen and (max-width: 1350px) {
+      @media screen and (max-width: 1400px) {
         margin-top: 5px;
         text-align: center;
-      }
-      @media screen and (max-width: 1100px) {
-        padding: 5px;
       }
     }
   }
@@ -89,7 +91,7 @@
       width: 100%;
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1100px) {
       display: block;
     }
   }
@@ -101,23 +103,23 @@
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   z-index: 999;
 }
+
 .sticky {
   position: fixed;
   top: 0;
   width: 100%;
-}
-
-.sticky + .content {
-  padding-top: 102px;
+  transition: bottom 0.5s ease;
 }
 
 .header-links {
+  height: 65px;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   padding: 10px 0;
+  transition: top 1s linear;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1100px) {
     display: none;
   }
 
@@ -132,35 +134,50 @@
 
     li {
       position: relative;
-      margin-right: 20px;
+      margin-right: 32px;
+      font-family: Montserrat;
       font-size: 18px;
       font-weight: 500;
 
-      @media screen and (max-width: 1100px) {
+      @media screen and (max-width: 1400px) {
         font-size: 16px;
+        margin-right: 10px;
       }
 
-      a {
-        padding-bottom: 5px;
+      .active{
+        transition: all 2s ease-out;
+      }
+
+      .menu-link {
+        position: relative;
+        padding-bottom: 7px;
+
+
+        &::before {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          width: 0;
+          height: 3px;
+          background: #f4c93f;
+          transition: all 0.5s linear;
+        }
       }
 
       &:hover a {
-        font-weight: 600;
         color: #01a1b7;
-      }
-
-      .active {
-        color: #01a1b7;
-        font-weight: 600;
-        border-bottom: 3px solid #f4c93f;
       }
     }
+    .active.menu-link::before {
+      width: 25px;
+
+    }
+    
   }
 
   .navigation-input {
     position: relative;
     padding: 5px;
-    margin: 0 auto;
 
     @media screen and (max-width: 1100px) {
       margin-top: 10px;
@@ -168,19 +185,31 @@
     }
 
     img {
-      width: 15px;
+      width: 16px;
       position: absolute;
-      top: 18px;
-      left: 15px;
+      top: 15px;
+      left: 20px;
     }
 
     input {
-      height: 40px;
+      width: 250px;
+      height: 35px;
       border-radius: 10px;
       border: 1px solid rgba(0, 0, 0, 0.5);
       outline: none;
-      padding-left: 30px;
+      padding-left: 35px;
+      margin-left: 5px;
       color: rgba(0, 0, 0, 0.5);
+
+      &::placeholder {
+        font-family: Montserrat;
+        font-size: 16px;
+        font-weight: 500;
+      }
+
+      @media screen and (max-width: 1400px) {
+        width: 180px;
+      }
 
       @media screen and (max-width: 1100px) {
         width: 150px;
@@ -192,6 +221,10 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+    margin-left: auto;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 500;
 
     @media screen and (max-width: 1100px) {
       margin-top: 10px;
