--- a/scss/about-us-page.scss
+++ b/scss/about-us-page.scss
@@ -245,6 +245,7 @@
   background-image: url(../images/about-us/about-image2.png);
   background-size: cover;
   border-radius: 10px;
+  margin-top: 50px;
 
   display: flex;
   flex-direction: column;
