--- a/scss/services.scss
+++ b/scss/services.scss
@@ -94,21 +94,36 @@
       }
     }
 
-    &__image {
+    &__icon {
+      margin: 0 20px;
       position: relative;
+      color: #01a1b7;
 
-      img {
-        @media screen and (max-width: 768px) {
-          width: 25px;
+      .icon-plus {
+        position: relative;
+        width: 38px;
+        height: 38px;
+        border: 3px solid #01a1b7;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        font-size: 24px;
+        justify-content: center;
+
+        .plus {
+          position: absolute;
+          width: 4px;
+          height: 20px;
+          border-radius: 5px;
+          background: #01a1b7;
+          transition: all 0.5s linear;
         }
-      }
 
-      .minus-button {
-        position: absolute;
-        transform: translateX(-36px);
-
-        @media screen and (max-width: 768px) {
-          transform: translateX(-25px);
+        .minus {
+          width: 20px;
+          height: 4px;
+          border-radius: 5px;
+          background: #01a1b7;
         }
       }
     }
@@ -121,6 +136,7 @@
     height: 0;
     transition: 0.3s;
     padding-left: 60px;
+    transition: all 0.6s ease-in-out;
 
     @media screen and (max-width: 768px) {
       width: 100%;
@@ -150,7 +166,7 @@
   margin-top: 100px;
   margin-bottom: 100px;
 
-  &-title{
+  &-title {
     @media screen and (max-width: 500px) {
       font-size: 25px;
     }
