--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -11,11 +11,11 @@ body {
 }
 
 .container {
-  width: 85%;
+  width: 1320px;
   margin: 0 auto;
 
-  @media screen and (max-width: 768px) {
-    width: 90%;
+  @media screen and (max-width: 1400px) {
+    width: 95%;
   }
 }
 
@@ -26,4 +26,5 @@ ul {
 a {
   text-decoration: none;
   color: #000000;
+  transition: all 0.2s ease-in-out;
 }
