--- a/scss/diagnostics.scss
+++ b/scss/diagnostics.scss
@@ -284,27 +284,62 @@
     cursor: pointer;
 
     &__title {
+      position: relative;
+      padding-left: 40px;
+      font-size: 28px;
+
       @media screen and (max-width: 768px) {
         font-size: 24px;
       }
-    }
 
-    &__image {
-      position: relative;
+      &::before {
+        position: absolute;
+        left: 20px;
+        top: 40%;
+        content: "";
+        width: 7px;
+        height: 7px;
+        background: #000000;
+        border-radius: 50%;
 
-      img {
         @media screen and (max-width: 768px) {
-          width: 30px;
+          left: 0;
         }
       }
+    }
 
-      .minus-button {
-        transition: all 0.5s linear;
-        position: absolute;
-        transform: translateX(-36px);
+    &__icon {
+      margin: 0 20px;
+      position: relative;
 
-        @media screen and (max-width: 768px) {
-          transform: translateX(-30px);
+      color: #01a1b7;
+
+      .icon-plus {
+        position: relative;
+        width: 38px;
+        height: 38px;
+        border: 3px solid #01a1b7;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        font-size: 24px;
+        justify-content: center;
+        
+
+        .plus{
+          position: absolute;
+          width: 4px;
+          height: 20px;
+          border-radius: 5px;
+          background: #01a1b7;
+          transition: all 0.5s linear;
+        }
+
+        .minus{
+          width: 20px;
+          height: 4px;
+          border-radius: 5px;
+          background: #01a1b7;
         }
       }
     }
