--- a/scss/sales.scss
+++ b/scss/sales.scss
@@ -94,6 +94,8 @@
   }
 
   &__image {
+    background-image: radial-gradient(#ffffff, #ffffff, #01a1b7, #01a1b7);
+
     @media screen and (max-width: 1100px) {
       display: none;
     }
